--- a/ADDRESS.yaml
+++ b/ADDRESS.yaml
@@ -1,7 +1,7 @@
 # ADDRESS MASTER
 domain: ADDRESS
-domainOwner: Senthil Selvaraj
-domainOwnerEmail: senthil.selvaraj@revance.com
+domainOwner: Parker Hanna
+domainOwnerEmail: parker.hanna@revance.com
 partitionedOn: null
 quantumName: address quantum
 usagePurpose: Analytical
