--- a/URL.yaml
+++ b/URL.yaml
@@ -1,7 +1,7 @@
 # URL MASTER
 domain: url
-domainOwner: Senthil Selvaraj
-domainOwnerEmail: senthil.salvaraj@revance.com
+domainOwner: Alexis Zecharies
+domainOwnerEmail: alexis.zecharies@revance.com
 partionedOn: URL
 quantumName: url quantum
 usagePurpose: Inventory; Analytical
