--- a/PRACTICE.yaml
+++ b/PRACTICE.yaml
@@ -35,7 +35,7 @@ tags: null
 # ----------------------------------------------------------
 # Dataset and Schema
 dataset:
-  - table: practice master 
+    - table: practice master 
     sourceTables: null
     physicalName: STAGING_DEV.CDP.PRACTICE_MASTER
     priorTableName: null
@@ -48,9 +48,9 @@ dataset:
         businessName: practice key 
         logicalType: text
         physicalType: VARCHAR(16777216)
-        maxLen: 10(fixed)
+        maxLen: null
         isNullable: false
-        description: primary key for practice
+        description: null
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -61,9 +61,9 @@ dataset:
         businessName: url key 
         logicalType: text
         physicalType: VARCHAR(16777216)
-        maxLen: 11(fixed)
+        maxLen: null
         isNullable: true
-        description: url foreign key for practice
+        description: null
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -74,9 +74,9 @@ dataset:
         businessName: location key 
         logicalType: text
         physicalType: VARCHAR(16777216)
-        maxLen: 11(fixed)
+        maxLen: null
         isNullable: true
-        description: location foreign key for practice
+        description: null
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -89,20 +89,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: true
-        description: name of the practice
-        criticalDataElementStatus: null
-        transformSourceTables: null
-        transformLogic: null
-        transformDescription: null
-        sampleValues: null
-      - column: derived_practice_name
-        isPrimary: false
-        businessName: derived practice name 
-        logicalType: text
-        physicalType: VARCHAR(16777216)
-        maxLen: null
-        isNullable: true
-        description: derived practice name using pre defined logic
+        description: null
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -116,19 +103,6 @@ dataset:
         maxLen: null
         isNullable: true
         description: null
-        criticalDataElementStatus: null
-        transformSourceTables: null
-        transformLogic: null
-        transformDescription: null
-        sampleValues: null
-      - column: derived_customer_number
-        isPrimary: false
-        businessName: derived customer number 
-        logicalType: text
-        physicalType: VARCHAR(16777216)
-        maxLen: null
-        isNullable: true
-        description: customer number derived from pre-defined logic
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -407,9 +381,48 @@ dataset:
         transformLogic: null
         transformDescription: null
         sampleValues: null
-      - column: multi_locations
+      - column: national_account
         isPrimary: false
-        businessName: multi locations 
+        businessName: national account 
+        logicalType: text
+        physicalType: VARCHAR(16777216)
+        maxLen: null
+        isNullable: true
+        description: null
+        criticalDataElementStatus: null
+        transformSourceTables: null
+        transformLogic: null
+        transformDescription: null
+        sampleValues: null
+      - column: sample_received
+        isPrimary: false
+        businessName: sample received 
+        logicalType: text
+        physicalType: VARCHAR(16777216)
+        maxLen: null
+        isNullable: true
+        description: null
+        criticalDataElementStatus: null
+        transformSourceTables: null
+        transformLogic: null
+        transformDescription: null
+        sampleValues: null
+      - column: trained
+        isPrimary: false
+        businessName: trained 
+        logicalType: text
+        physicalType: VARCHAR(16777216)
+        maxLen: null
+        isNullable: true
+        description: null
+        criticalDataElementStatus: null
+        transformSourceTables: null
+        transformLogic: null
+        transformDescription: null
+        sampleValues: null
+      - column: multi_location_count
+        isPrimary: false
+        businessName: multi location count 
         logicalType: text
         physicalType: VARCHAR(16777216)
         maxLen: null
@@ -464,19 +477,6 @@ dataset:
         businessName: domain 
         logicalType: text
         physicalType: VARCHAR(16777216)
-        maxLen: null
-        isNullable: true
-        description: null
-        criticalDataElementStatus: null
-        transformSourceTables: null
-        transformLogic: null
-        transformDescription: null
-        sampleValues: null
-      - column: is_national_account
-        isPrimary: false
-        businessName: is national account 
-        logicalType: boolean
-        physicalType: NUMBER(1,0)
         maxLen: null
         isNullable: true
         description: null
@@ -693,11 +693,11 @@ dataset:
         transformLogic: null
         transformDescription: null
         sampleValues: null
-      - column: practicetoken
+      - column: load_date
         isPrimary: false
-        businessName: practicetoken 
-        logicalType: text
-        physicalType: VARCHAR(16777216)
+        businessName: load date 
+        logicalType: timestamp_ntz
+        physicalType: NUMBER(1,0)
         maxLen: null
         isNullable: true
         description: null
@@ -706,11 +706,11 @@ dataset:
         transformLogic: null
         transformDescription: null
         sampleValues: null
-      - column: urltoken
+      - column: modified_date
         isPrimary: false
-        businessName: urltoken 
-        logicalType: text
-        physicalType: VARCHAR(16777216)
+        businessName: modified date 
+        logicalType: timestamp_ntz
+        physicalType: NUMBER(1,0)
         maxLen: null
         isNullable: true
         description: null
