--- a/DATA_CONTRACTS/PRACTICE/PRACTICE.yaml
+++ b/DATA_CONTRACTS/PRACTICE/PRACTICE.yaml
@@ -50,7 +50,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: false
-        description: null
+        description: primary key for practice
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -63,7 +63,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: true
-        description: null
+        description: foreign key for url
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -76,7 +76,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: true
-        description: null
+        description: foreign key for location
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -89,7 +89,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: true
-        description: null
+        description: name of practice
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
@@ -102,7 +102,7 @@ dataset:
         physicalType: VARCHAR(16777216)
         maxLen: null
         isNullable: true
-        description: null
+        description: foreign key for customer
         criticalDataElementStatus: null
         transformSourceTables: null
         transformLogic: null
